--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background: black;
+    background: rgb(73, 73, 73);
     width: 100%;
     text-align: center;
 }
